--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -20,7 +20,7 @@
         {{ form.content.label(class = 'form-label') }}
         {{ form.content(class='form-control', rows = '10') }}
         <br>
-        {{ form.slug(class='form-control', rows = '10', value='abc') }}
+        {{ form.slug(class='form-control', rows = '10', value='abc', type='hidden') }}
         <br>
         {{ form.submit(class='btn btn-primary') }}
     </form>
