--- a/templates/posts.html
+++ b/templates/posts.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}
-    Review Pages        
+Review Pages
 {% endblock %}
 {% block content %}
 
@@ -20,10 +20,10 @@
     {{ post.content|safe }} <br><br>
 
     <a href="{{ url_for('post', id=post.id) }}" class="btn btn-outline-secondary">View Review</a>
-    {% if post.poster_id == current_user.id %}
-        <a href="{{ url_for('delete_post', id=post.id) }}" class="btn btn-outline-danger">Delete Review</a>
-        <a href="{{ url_for('edit_post', id=post.id) }}" class="btn btn-outline-secondary">Edit Review</a>
-    {% endif %}
+    <!-- {% if post.poster_id == current_user.id %} -->
+    <a href="{{ url_for('delete_post', id=post.id) }}" class="btn btn-outline-danger">Delete Review</a>
+    <a href="{{ url_for('edit_post', id=post.id) }}" class="btn btn-outline-secondary">Edit Review</a>
+    <!-- {% endif %} -->
 </div>
 {% endfor %}
 {% endblock %}
