--- a/templates/index.html
+++ b/templates/index.html
@@ -1,37 +1,51 @@
 {% extends 'base.html' %}
-   <!-- Testimonial Start -->
+<!-- Testimonial Start -->
 {% block title %}
-    Home page
+Home page
 {% endblock %}
 {% block content %}
-   <div class="container-fluid bg-image py-5" style="margin: 90px 0;">
+<div class="container-fluid bg-image py-5" style="margin: 90px 0;">
     <div class="container py-5">
         <div class="row align-items-center">
             <div class="col-lg-5 mb-5 mb-lg-0">
                 <div class="section-title position-relative mb-4">
-                    <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">Cookmeai</h6>
-                    <h1 class="display-4">What is Cookmeai</h1>
+                    <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">CookmeAI</h6>
+                    <h1 class="display-4">What is CookmeAI</h1>
                 </div>
-                <p class="m-0">Welcome to our cuisine website! This website is a project we made for the Spartan Hack 8 that includes multiple features to give users( especially MSU students) a convenient experience. We are excited to share with you our newest features: Img2Ing, Eat2gether and food/hall reviews from MSU.</p>
+                <p class="m-0">Welcome to our cuisine website! This website is a project we made for the Spartan Hack 8
+                    that includes multiple features to give users( especially MSU students) a convenient experience. We
+                    are excited to share with you our newest features: Img2Ing, Eat2gether and food/hall reviews from
+                    MSU.</p>
             </div>
             <div class="col-lg-7">
                 <div class="owl-carousel testimonial-carousel">
                     <div class="bg-white p-5">
                         <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                        <p>Img2Ing is an AI bot that takes food images as an input and it would give you the ingredients and how to cook for it.
-                            This AI model is still in our developing stages as it still gives out relatively true outputs, but sometimes it gives unexpected output.</p>
+                        <p>Img2Ing is an AI bot that takes food images as an input and it would give you the ingredients
+                            and how to cook for it.
+                            This AI model is still in our developing stages as it still gives out relatively true
+                            outputs, but sometimes it gives unexpected output.</p>
                     </div>
                     <div class="bg-white p-5">
                         <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                        <p>Eat2Gether is a feature we integrated in the website for MSU students and also everyone. Assuming you have a group of 4s, just like our spartan Hack team, and you want to meet up and eat together, this feature will calculate and give out the dining places in the middle.</p>
+                        <p>Eat2Gether is a feature we integrated in the website for MSU students and also everyone.
+                            Assuming you have a group of 4s, just like our spartan Hack team, and you want to meet up
+                            and eat together, this feature will calculate and give out the dining places in the middle.
+                        </p>
                     </div>
                     <div class="bg-white p-5">
                         <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                        <p>Our first attempt for this website was just simply making a blog with foods and also hall reviews for new MSU students to read. After several ideal exchanges, we decided to add more features and change everything, but we still keep this feature as our team loves to write blogs.</p>
+                        <p>Our first attempt for this website was just simply making a blog with foods and also hall
+                            reviews for new MSU students to read. After several ideal exchanges, we decided to add more
+                            features and change everything, but we still keep this feature as our team loves to write
+                            blogs.</p>
                     </div>
                     <div class="bg-white p-5">
                         <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                        <p>Our cuisine website is dedicated to providing you with a range of diversity of convenience . We hope that you have found inspiration for your next meal with your friend and have enjoyed exploring the various cuisines and techniques featured on our site. We appreciate your visit and encourage you to come back often for new and exciting content. Go Green!</p>
+                        <p>Our cuisine website is dedicated to providing you with a range of diversity of convenience .
+                            We hope that you have found inspiration for your next meal with your friend and have enjoyed
+                            exploring the various cuisines and techniques featured on our site. We appreciate your visit
+                            and encourage you to come back often for new and exciting content. Go Green!</p>
                     </div>
                 </div>
             </div>
