--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,7 +29,7 @@
               </div>
               </div>
               <button onclick="defaultBtnActive()" id="custom-btn">Upload a Food Image</button>
-              <form id='foodimgform' action="/home" method="POST" enctype="multipart/form-data">
+              <form id='foodimgform' action="/img2ing" method="POST" enctype="multipart/form-data">
                 <input id="default-btn" type="file" hidden name="imagefile">
               </form>
           </div>
