--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,7 +8,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{{ url_for('home') }}">Img2Ing</a>
+                    <a class="nav-link active" aria-current="page" href="{{ url_for('img2ing') }}">Img2Ing</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{{ url_for('eat2gether') }}">Eat2Gether</a>
